# feedreader

./: .git-blame-ignore-revs  .gitignore  .pyup.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  docker-compose.override.yml  docker-compose.yml  manage.py  nginx.conf  requirements.txt  setup.py  web-variables.env
app/: .pre-commit-config.yaml  Dockerfile  Pipfile  entrypoint.sh  pyproject.toml  requirements.txt
app/feedreader/: __init__.py  admin.py  backend.py  celery.py  middleware.py  models.py  tasks.py  urls.py  wsgi.py
app/feedreader/functions/: __init__.py  feeds.py  feedupdate.py  outline.py
app/feedreader/migrations/: 0001_squashed_0014_auto_20171203_2154.py  0001_squashed_0020_delete_oldoutline.py  0002_add_inserted_date.py  0003_set_inserted_date.py  0004_remove_null_from_inserted_date.py  0005_feed_quirk_fix_invalid_publication_date.py  0006_mptt_update.py  0007_feed_favicon.py  0008_feed_quirk_fix_override_encoding.py  0009_remove_feed_quirkfixnotxml.py  0010_camel_to_snake_case.py  0011_delete_usertoken.py  0012_feed_is_nsfw.py  0013_userconfig.py  0014_delete_configstore.py  0015_feed_errored_since.py  0016_rename_outline_oldoutline.py  0017_auto_20221122_1428.py  0017_outline.py  0018_copy_oldoutline_to_outline.py  0018_outline.py  0019_copy_oldoutline_to_outline.py  0020_delete_oldoutline.py  0021_alter_outline_user.py  0022_alter_userconfig_user.py
app/feedreader/models/: __init__.py  display_title.py  (+5 more)
app/feedreader_api/: functions.py  urls.py
app/feedreader_gui/: package.json  tsconfig.json  urls.py  webpack.config.js
(+162 files in other folders)
