[tool.poetry]
name = "feedreader"
version = "2.2.2"
description = "Automated RSS feedreader with webinterface."
authors = ["Jasper Seidel <1558353+jawsper@users.noreply.github.com>"]
license = "MIT"
readme = "../README.rst"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "~=3.8.4"
beautifulsoup4 = "~=4.11.1"
celery = "~=5.2.2"
Django = "~=4.2.0"
django-extensions = "~=3.2.1"
django_celery_beat = "~=2.5.0"
django-cors-headers = "~=3.14.0"
django-treebeard = "~=4.7"
django-webpack-loader = "~=1.7.0"
djangorestframework = "~=3.14.0"
djangorestframework-recursive = "~=0.1.2"
drf-nested-routers = "~=0.93.4"
feedparser = "~=6.0.2"
gunicorn = "~=20.1.0"
pillow = "~=10.0.1"
psycopg = {version = "~=3.1.0", extras = ["binary"]}
redis = "~=4.4.0"
sentry-sdk = "~=1.14.0"
uritemplate = "~=4.1.1"
whitenoise = "~=6.2.0"


[tool.poetry.group.dev.dependencies]
black = "~=22.10.0"
django-debug-toolbar = "~=4.0.0"
pre-commit = "~=2.20.0"
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
